Update GITHUB Bank Authentication with new Virtual Env.ipynb

--- a/GITHUB Bank Authentication with new Virtual Env.ipynb
+++ b/GITHUB Bank Authentication with new Virtual Env.ipynb
@@ -33,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df= pd.read_csv('E://Pragati Great Learning//Data Science Job Preparation//Github Projects//Bank Note Authentication//Datasets//BankNote_Authentication.csv')"
+    "df= pd.read_csv('BankNote_Authentication.csv')"
    ]
   },
   {
